styles/_editorjs.scss
@import './mixins';

.codex-editor {
  &__redactor {
    padding-bottom: 0 !important;
  }

  & .ce-toolbar {
    z-index: 10;
  }

  & .ce-block__content {
    max-width: unset;

    .ce-paragraph *:not(code) {
      background-color: transparent!important;
    }
  }

  .editorjs-codeFlask_Wrapper .editorjs-codeFlask_LangDisplay {
    height: unset;
  }

  .codeflask--has-line-numbers pre.codeflask__flatten {
    width: unset;
  }

  .codeflask {
    &.codeflask--has-line-numbers:before,
    & .codeflask__lines {
      z-index: 4;
    }
  }
}

.readMode {
  .inline-image__picture img,
  img.image-tool__image-picture {
    cursor: zoom-in;
  }
}

.inline-code {
  background: rgba(240, 240, 240, 0.7) !important;
  color: black !important;
  padding: 3px 6px !important;
}

.editor-container,
.ce-toolbar__content {
  max-width: 820px;
  @include screenMin1200 {
    max-width: 880px;
  }
}

.editor-container {
  margin: 0 auto;
  position: relative;
  .ce-inline-toolbar {
    z-index: 4;
  }
}

.codex-editor__loader {
  display: none;
}

.ce-settings {
  @include screenMax576 {
    top: 40px;
    bottom: unset;
  }
}

// styles for dark theme
.theme-dark .codex-editor {
  * {
    color: inherit;
    &:host {
      background-color: var(--popover-bg);
    }
  }

  .ce-inline-toolbar {
    background-color: var(--popover-bg);
    border-width: 0.5px;

    .ce-inline-toolbar__dropdown {
      border-top-left-radius: 6px;
      border-bottom-left-radius: 6px;
      &:hover {
        background-color: var(--lightBlack);
      }
    }

    .ce-inline-tool {
      &:hover {
        background-color: var(--lightBlack);
      }
    }

    .ce-inline-toolbar__actions {
      input {
        color: black;
      }
    }

    .ce-conversion-toolbar {
      background-color: var(--popover-bg);

      .ce-conversion-tool {
        .ce-conversion-tool__icon {
          background-color: transparent;
        }
        &:hover {
          background-color: var(--lightBlack);
        }
      }
    }
  }

  .inline-image {
    .inline-image__picture--withBackground {
      background-color: transparent;
    }
  }

  .editorjs-codeFlask_Wrapper {
    border: 0.5px solid;
    background-color: transparent;
    .editorjs-codeFlask_LangDisplay {
      background-color: transparent;
      border-top: 0.5px solid;
      border-left: 0.5px solid;
    }
    .codeflask.codeflask--has-line-numbers {
      border-bottom: 2px solid transparent;

      &:before {
        background-color: var(--popover-bg);
        border-right: 0.5px solid;
        border-bottom: 0.5px solid;
      }
    }
    .codeflask__textarea {
      caret-color: inherit;
    }
  }

  .cdx-alert {
    background-color: transparent;
  }

  .ce-toolbar {
    .ce-toolbar__actions {
      .ce-toolbar__plus:hover,
      .ce-toolbar__settings-btn:hover {
        background-color: transparent;
        border: 0.5px solid;
      }
    }

    .ce-settings__default-zone {
      text-align: center;
    }

    .ce-settings {
      background-color: var(--popover-bg);
      border-width: 0.5px;

      .cdx-settings-button:hover,
      .ce-settings__button:hover {
        background-color: var(--lightBlack);
      }
    }

    .ce-popover {
      background-color: var(--popover-bg);
      border-width: 0.5px;

      .ce-popover__item {
        &:hover {
          background-color: var(--lightBlack);
        }
        .ce-popover__item-icon {
          background-color: transparent;
        }
      }
    }

    .nice-select {
      $min-width: 118px;
      min-width: $min-width;
      width: 100%;
      background-color: var(--lightBlack);
      .nice-select-dropdown {
        background-color: var(--popover-bg);
        left: 50%;
        transform: translateX(-50%);
        min-width: $min-width;
      }
      .option {
        &:hover,
        &.focus {
          background-color: var(--lightBlack);
        }
      }
    }
  }

  .ce-block--selected .ce-block__content {
    background-color: var(--popover-bg);
  }

  .image-tool {
    --bg-color: transparent;
    &.image-tool--loading .image-tool__image {
      background-color: transparent;
    }
  }
}

